--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   }
